@@ -6572,3 +6572,5 @@ PACKAGE: 2.2.99.2
  * Change to DefaultXML import plugin to pass through attributes to the 
     subclassing import plugin.
 
+2007-10-19 cjg
+ * Added code for icons to appear in items and review pages.
